--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -89,6 +89,9 @@
     <Content Include="Assets\OctoAwesome.Client\Crew\Hugo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\OctoAwesome.Client\Crew\marie.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\OctoAwesome.Client\Crew\Nicol.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
