--- a/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
+++ b/OctoAwesome/OctoAwesome.Client/OctoAwesome.Client.csproj
@@ -70,14 +70,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>OctoClient.resx</DependentUpon>
     </Compile>
-    <Compile Include="Languages\OctoKeys.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>OctoKeys.resx</DependentUpon>
-    </Compile>
     <Compile Include="OctoGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourcePack.cs" />
     <Compile Include="Screens\BaseScreen.cs" />
     <Compile Include="Screens\CreateUniverseScreen.cs" />
     <Compile Include="Screens\CreditsScreen.cs" />
@@ -115,6 +111,7 @@
     <Content Include="Assets\OctoAwesome.Client\compass.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Assets\OctoAwesome.Client\FallbackTexture.png" />
     <Content Include="Assets\OctoAwesome.Client\octocross.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -204,11 +201,6 @@
     <EmbeddedResource Include="Languages\OctoClient.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>OctoClient.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Languages\OctoKeys.de.resx" />
-    <EmbeddedResource Include="Languages\OctoKeys.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>OctoKeys.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
