--- a/OctoAwesome/OctoAwesome.Docs/OctoAwesome.Docs.csproj
+++ b/OctoAwesome/OctoAwesome.Docs/OctoAwesome.Docs.csproj
@@ -40,30 +40,22 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="template\partials\footer.tmpl.partial" />
     <None Include="template\partials\navbar.tmpl.partial" />
+    <None Include="template\token.json" />
     <None Include="toc.yml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="template\favicon.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="engenious, Version=0.1.7.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\engenious.0.1.7\lib\net40\engenious.dll</HintPath>
-    </Reference>
-    <Reference Include="NVorbis, Version=0.8.4.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\engenious.0.1.7\lib\net40\NVorbis.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4">
-      <HintPath>..\packages\engenious.0.1.7\lib\net40\OpenTK.dll</HintPath>
-    </Reference>
+    <Content Include="template\conceptual.extension.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\docfx.msbuild.2.2.2\build\docfx.msbuild.targets" Condition="Exists('..\packages\docfx.msbuild.2.2.2\build\docfx.msbuild.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>Dieses Projekt verweist auf mindestens ein NuGet-Paket, das auf diesem Computer fehlt. Verwenden Sie die Wiederherstellung von NuGet-Paketen, um die fehlenden Dateien herunterzuladen. Weitere Informationen finden Sie unter "http://go.microsoft.com/fwlink/?LinkID=322105". Die fehlende Datei ist "{0}".</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\docfx.msbuild.2.2.2\build\docfx.msbuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\docfx.msbuild.2.2.2\build\docfx.msbuild.targets'))" />
-</Target>
+    <Error Condition="!Exists('..\packages\docfx.console.2.29.1\build\docfx.console.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\docfx.console.2.29.1\build\docfx.console.targets'))" />
+  </Target>
   <ProjectExtensions />
+  <Import Project="..\packages\docfx.console.2.29.1\build\docfx.console.targets" Condition="Exists('..\packages\docfx.console.2.29.1\build\docfx.console.targets')" />
 </Project>
