--- a/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
+++ b/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -35,6 +35,7 @@
     <Reference Include="Command Management System, Version=3.0.0.146, Culture=neutral, PublicKeyToken=304a821013b0b687, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandManagementSystem.3.0.0-alpha2\lib\net46\Command Management System.dll</HintPath>
     </Reference>
+    <Reference Include="engenious, Version=0.2.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
@@ -46,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ChunkCommands.cs" />
+    <Compile Include="Commands\OfficialCommands.cs" />
+    <Compile Include="Commands\GeneralCommands.cs" />
     <Compile Include="Commands\PlayerCommands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -59,6 +63,10 @@
     <ProjectReference Include="..\OctoAwesome.Network\OctoAwesome.Network.csproj">
       <Project>{B1F4D7BB-7F56-4E96-87DD-EBEBAE9CF336}</Project>
       <Name>OctoAwesome.Network</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OctoAwesome\OctoAwesome.csproj">
+      <Project>{93601DB8-F134-418E-8B35-11E30CFEC31C}</Project>
+      <Name>OctoAwesome</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
