--- a/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
+++ b/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
@@ -56,9 +56,12 @@
     <Compile Include="Client.cs" />
     <Compile Include="ConnectedClient.cs" />
     <Compile Include="NetworkPersistenceManager.cs" />
+    <Compile Include="OctoNetworkEventArgs.cs" />
     <Compile Include="OctoNetworkStream.cs" />
+    <Compile Include="OctoPackageAvailableEventArgs.cs" />
     <Compile Include="OfficialCommands.cs" />
     <Compile Include="Package.cs" />
+    <Compile Include="PackageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerHandler.cs" />
