--- a/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
+++ b/OctoAwesome/OctoAwesome.GameServer/OctoAwesome.GameServer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Commands\PlayerCommands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
