--- a/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
+++ b/OctoAwesome/OctoAwesome.Network/OctoAwesome.Network.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="ServerNotifications\ServerDataNotification.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimulationManager.cs" />
     <Compile Include="Subscription.cs" />
