--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -30,7 +30,7 @@
     <UseVSHostingProcess>true</UseVSHostingProcess>
     <DocumentationFile>..\bin\Debug\OctoAwesome.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -112,7 +112,7 @@
     <Compile Include="Notifications\EntityNotification.cs" />
     <Compile Include="Notifications\IUpdateHub.cs" />
     <Compile Include="Notifications\IUpdateProvider.cs" />
-    <Compile Include="Notifications\IUpdateSubscribe.cs" />
+    <Compile Include="Notifications\IUpdateSubscriber.cs" />
     <Compile Include="Notifications\Notification.cs" />
     <Compile Include="Notifications\NotificationSubscription.cs" />
     <Compile Include="OrientationFlags.cs" />
