--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializableCollection.cs" />
+    <Compile Include="Serialization\Serializer.cs" />
     <Compile Include="Simulation.cs" />
     <Compile Include="SimulationComponent.cs" />
     <Compile Include="SimulationState.cs" />
