--- a/OctoAwesome/OctoAwesome/OctoAwesome.csproj
+++ b/OctoAwesome/OctoAwesome/OctoAwesome.csproj
@@ -121,6 +121,7 @@
     <Compile Include="PlanetIndex3.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteEntity.cs" />
     <Compile Include="SerializableCollection.cs" />
     <Compile Include="Serialization\Serializer.cs" />
     <Compile Include="Simulation.cs" />
